feat: 优化功能体检！